# analytics-api

./: README.md  compose.yaml  pyproject.toml
nbs/: 1-verify-api-event-route.ipynb  4-send-data-to-the-api.ipynb
src/: main.py
src/api/db/: session.py
src/api/events/: __init__.py  models.py  routing.py  schemas.py
