[project]
name = "analytics-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi==0.115.11",
    "gunicorn>=23.0.0",
    "psycopg[binary]>=3.3.2",
    "pydantic>=2.12.5",
    "python-decouple>=3.8",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.45",
    "sqlmodel>=0.0.27",
    "timescaledb>=0.0.4",
    "uvicorn>=0.38.0",
]
